<resources>
    <string name="app_name">BilibiliPlayer</string>
    <string name="cover_page">封面</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="face">头像</string>
    <string name="no_login">未登录</string>
    <string name="uid_hint">UID:</string>
    <string name="player">听歌</string>
    <string name="playlist">歌单</string>
    <string name="user">用户</string>
    <string name="settings">设置</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uid">UID</string>
    <string name="commit_user_info">提&#160;&#160;&#160;&#160;交</string>
    <string name="download">Download</string>
    <string name="playmode_default">列表循环</string>
    <string name="playmode_random">随机播放</string>
    <string name="playmode_smart">调平播放</string>
    <string name="playmode_loop">单曲循环</string>
    <string name="settings_play_mode_hint">播放模式</string>

    <!--  Toast 统一用t_开头   -->
    <string name="t_network_fail">网络错误，请检查网络连接</string>
    <string name="t_get_favlist_success">成功获取收藏夹</string>
    <string name="t_get_userinfo_success">成功获取用户信息</string>
    <string name="t_please_login">请先登录</string>
    <string name="t_download_first">请先下载</string>
    <string name="t_downloading">正在下载…</string>
    <string name="t_filebroken">文件似乎已经损坏，已经帮你删除，请重新下载</string>
    <string name="t_download_finish">下载完成</string>
    <string name="t_nothing_in_history">前面再也没有啦</string>
    <string name="stop_playing">停止播放:</string>
    <string name="stop_playing_2">分钟后</string>
    <string name="confirm">确认</string>
    <string name="t_set_alarm_success">设置成功</string>
    <string name="exoplayer">听歌</string>

</resources>