<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/settings_play_mode_hint"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/settings_play_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp">

        <RadioButton
            android:id="@+id/settings_play_mode_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:checked="true"
            android:text="@string/playmode_default"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/settings_play_mode_random"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/playmode_random"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/settings_play_mode_smart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/playmode_smart"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/settings_play_mode_loop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/playmode_loop"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_playing"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/settings_playing_time"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:text="@string/stop_playing_2"
            android:layout_marginEnd="32dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_gravity="center_vertical"
            android:id="@+id/settings_playing_time_confirm_button"/>
    </LinearLayout>
</LinearLayout>