<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserFragment"
    android:orientation="vertical"
    android:id="@+id/fragment_user">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="96dp"
        android:id="@+id/user_face_image"
        android:contentDescription="@string/face" />
    <TextView
        android:id="@+id/user_name_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_login"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/user_uid_layout"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/uid_hint"
            android:layout_marginEnd="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/user_uid_textbox"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="20">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="2dp"
            android:visibility="invisible"/>
        <EditText
            android:id="@+id/user_uid_input"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="12"
            android:hint="@string/uid"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"/>
    </LinearLayout>

    <Button
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/user_commit_info"
        android:text="@string/commit_user_info"/>
</LinearLayout>