<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_margin="32dp"
        android:contentDescription="@string/face"
        android:id="@+id/menu_face_image"/>
    <TextView
        android:id="@+id/menu_name_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_login"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:id="@+id/menu_uid_layout"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/uid_hint"
            android:layout_marginEnd="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/menu_uid_textbox"/>
    </LinearLayout>
</LinearLayout>